exports[`test should say \`Give Now using 4321\` if cardNumber 1`] = `
<span>
  Give Using 4321
</span>
`;

exports[`test should say \`Give Now using 6789\` if accountNumber 1`] = `
<span>
  Give Using 6789
</span>
`;

exports[`test should say \`Give Now\` with minimal props 1`] = `
<span>
  Give
</span>
`;

exports[`test should say \`Schedule Now using 4321\` if schedule and cardNumber 1`] = `
<span>
  Schedule Using 4321
</span>
`;

exports[`test should say \`Schedule Now using 6789\` if schedule and accountNumber 1`] = `
<span>
  Schedule Using 6789
</span>
`;

exports[`test should say \`Schedule Now\` if schedule present 1`] = `
<span>
  Schedule
</span>
`;

exports[`test should say \`Transfer Now using 4321\` if schedule and cardNumber 1`] = `
<span>
  Transfer Using 4321
</span>
`;

exports[`test should say \`Transfer Now using 6789\` if recoverable schedule and accountNumber 1`] = `
<span>
  Transfer Using 6789
</span>
`;

exports[`test should say \`Transfer Now\` if recoverable schedule 1`] = `
<span>
  Transfer
</span>
`;
